# echo

./: CMakeLists.txt  client.cpp  client_config.h  client_test.cpp  server.cpp  server_config.h
client/: CMakeLists.txt  client.cpp  client.h  config.h
helpers/: helpers.hpp
logger/: CMakeLists.txt  logger.cpp  logger.h
